# py-tinker-tut

./: .gitignore  README.md  dist.bat  main.py  main_qt.py  pyproject.toml
