[tool.poetry]
name = "py-tinker-tut"
version = "0.1.0"
description = ""
authors = ["chenyu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openpyxl = "^3.1.5"
pyinstaller = "^6.11.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
